update and add swagger, refesh token, docker 8/6
